kube/filler-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filler1
  labels:
    k8s-app: filler1
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: filler1
  template:
    metadata:
      labels:
        k8s-app: filler1
    spec:
      containers:
        - name: filler
          image: ivukotic/vpservice:latest
          command: ["node"]
          args: ["filler.js"]
          resources:
            requests:
              cpu: 100m
              memory: 1000Mi
            limits:
              cpu: 900m
              memory: 1500Mi
          volumeMounts:
            - name: conf-volume
              mountPath: "/etc/vps/"
          imagePullPolicy: Always
      volumes:
        - name: conf-volume
          secret:
            secretName: config
