kube/filler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filler  
  labels:
    k8s-app: filler
spec:
  replicas: 5
  selector:
    matchLabels:
      k8s-app: filler
  template:
    metadata:
      labels:
        k8s-app: filler
    spec:
      containers:
      - name: filler
        image: ivukotic/vpservice:latest
        command: ["node"]
        args: ["filler.js"]
        volumeMounts:
        - name: conf-volume
          mountPath: "/etc/vps/"
      volumes:
      - name: conf-volume
        secret:
          secretName: config
          items:
          - key: conf
            path: config.json
