kube/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: vps
  labels:
    k8s-app: vps
  annotations:
    loadbalancer.openstack.org/network-id: "798d00f3-2af9-48a0-a7c3-a26d909a2d64"
    service.beta.kubernetes.io/openstack-internal-load-balancer: "true"
    loadbalancer.openstack.org/cascade-delete: "false"
    loadbalancer.openstack.org/existing-pool-id: "2995e682-0e3d-43c7-9841-0cfab1e7ab67"
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
  selector:
    k8s-app: vps
  type: LoadBalancer
