kube/topology.yaml
apiVersion: v1
kind: Service
metadata:
  name: vp-topology
  labels:
    k8s-app: topology
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
  selector:
    k8s-app: topology
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topology
  labels:
    k8s-app: topology
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: topology
  template:
    metadata:
      labels:
        k8s-app: topology
    spec:
      containers:
        - name: topology
          image: ivukotic/vpservice:test
          command: ["node"]
          args: ["Topology/topology.js"]
          resources:
            requests:
              cpu: 100m
              memory: 1000Mi
            limits:
              cpu: 900m
              memory: 1500Mi
          volumeMounts:
            - name: settings-volume
              mountPath: "/etc/vps/"
              readOnly: true
          ports:
            - containerPort: 443
      volumes:
        - name: settings-volume
          projected:
            sources:
              - secret:
                  name: config
              - secret:
                  name: es-conn
