kube/frontend.uc.yaml
kind: Service
apiVersion: v1
metadata:
  name: vps
  labels:
    k8s-app: vps
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    k8s-app: vps
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vps
  labels:
    k8s-app: vps
  annotations:
    kubernetes.io/ingress.class: slate
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - vps.atlas-ml.org
    secretName: auto-generated-vps
  rules:
  - host: vps.atlas-ml.org
    http:
      paths:
      - path: /
        backend:
          serviceName: vps
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vps  
  labels:
    k8s-app: vps
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: vps
  template:
    metadata:
      labels:
        k8s-app: vps
    spec:
      containers:
      - name: vps
        image: ivukotic/vpservice:latest
        ports:
          - containerPort: 80
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /healthz
            port: 80
          periodSeconds: 60
          initialDelaySeconds: 60
          timeoutSeconds: 10
        volumeMounts:
          - name: frontend-conf-volume
            mountPath: "/etc/vps/"
          - name: es-conn-volume
            mountPath: "/etc/es/"
      volumes:
        - name: frontend-conf-volume
          secret:
            secretName: config
            items:
            - key: conf
              path: config.json     
        - name: es-conn-volume
          secret:
            secretName: es-conn
            items:
            - key: es-conf
              path: es_conn.json
